feat: atualizar swagger com novos campos do fornecedor
